--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -87,7 +87,7 @@
               [error]="this.signUpForm.get('password')!.hasError('required') || this.signUpForm.get('password')!.value.length<8 || this.signUpForm.get('passwordConfirm')!.value != this.signUpForm.get('password')!.value"
             >
             </app-input>
-            <p id="required-message-password" *ngIf="this.signUpForm.get('password')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_PASSWORD' | translate}}</p>
+            <!-- <p id="required-message-password" *ngIf="this.signUpForm.get('password')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_PASSWORD' | translate}}</p> -->
             <p id="format-message-password" *ngIf="this.signUpForm.get('password')!.value.length<8 && submitted" class="error-field">{{'INPUT_ERRORS.INVALID_TEXT_LENGTH' | translate}}</p>
             <p id="different-message-password" *ngIf="this.signUpForm.get('passwordConfirm')!.value != this.signUpForm.get('password')!.value  && submitted" class="error-field">{{'INPUT_ERRORS.DIFERENT_PASSWORD' | translate}}</p>
           </div>
