fix(navbar): new language selector

--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -9,7 +9,7 @@ nav{
   align-items: center;
 
   .skip-content{
-    margin-top: -100px;
+    margin-top: -150px;
     text-decoration: none;
     color: @text-color;
     outline: none;
@@ -19,10 +19,8 @@ nav{
     }
   }
 
-  a, p, select{
+  a, p, .selector{
     margin-right: 30px;
   }
-
-
 
 }
