--- a/src/app/components/controls/navbar/navbar.component.html
+++ b/src/app/components/controls/navbar/navbar.component.html
@@ -1,8 +1,11 @@
 <nav>
   <a class="skip-content" tabindex="1" (click)="redirecToMainContent()" (keyup.enter)="redirecToMainContent()">{{ 'NAVBAR.SKIP' | translate }}</a>
-  <select name="language" [(ngModel)]="selectedItem" (change)="changeLanguaje(item.value)" #item>
+  <div class="selector">
+  <app-language-selector (seleccion)="changeLanguage($event)"></app-language-selector>
+  </div>
+  <!-- <select name="language" [(ngModel)]="selectedItem" (change)="changeLanguaje(item.value)" #item>
     <option value="en">{{ 'NAVBAR.EN' | translate }}</option>
     <option value="es">{{ 'NAVBAR.ES' | translate }}</option>
-  </select>
+  </select> -->
   <div #myElement [tabIndex]="variable" attr.aria-label="{{ 'NAVBAR.CONTENT' | translate }}"></div>
 </nav>
