fix(navbar): new elements

--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -7,7 +7,7 @@
       <div class="spinner" *ngIf="showSpinner">
         <app-spinner></app-spinner>
       </div>
-      <h1  attr.aria-label="{{ 'AUTH.LOGIN' | translate }}" data-aos="fade-down" data-aos-duration="800" data-aos-delay="800"><a class="title" href="#">{{ 'AUTH.LOGIN' | translate }}</a></h1>
+      <h1  attr.aria-label="{{ 'AUTH.LOGIN' | translate }}" data-aos="fade-down" data-aos-duration="800" data-aos-delay="800">{{ 'AUTH.LOGIN' | translate }}</h1>
 
       <div class="inputs" data-aos="fade-down" data-aos-duration="800" data-aos-delay="1200">
         <app-label
