--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -8,7 +8,7 @@
         <app-spinner></app-spinner>
       </div>
 
-      <h1 attr.aria-label="{{ 'AUTH.CREATE' | translate }}" data-aos="fade-down" data-aos-duration="800" data-aos-delay="800"><a class="title" href="#">{{ 'AUTH.CREATE' | translate }}</a></h1>
+      <h1 attr.aria-label="{{ 'AUTH.CREATE' | translate }}" data-aos="fade-down" data-aos-duration="800" data-aos-delay="800">{{ 'AUTH.CREATE' | translate }}</h1>
 
       <div class="inputs" data-aos="fade-down" data-aos-duration="800" data-aos-delay="1200">
         <div class="split-row">
