--- a/src/app/components/controls/language-selector/language-selector.component.less
+++ b/src/app/components/controls/language-selector/language-selector.component.less
@@ -45,3 +45,10 @@ img{
   background-color: @secondary-color;
   color: @custom-primary;
 }
+
+@media (max-width: 340px)
+{
+  button{
+    width: 60px;
+  }
+}
