--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -5,30 +5,118 @@ nav{
   width: 100%;
   height: 50px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 
   .skip-content{
     margin-top: -150px;
+    margin-left: 25px;
     text-decoration: none;
     color: @text-color;
     outline: none;
-    border-bottom: 2px solid @custom-primary;
     &:focus{
       margin-top: 0;
+      border-bottom: 2px solid @secondary-color;
     }
   }
 
-  a, p, .selector{
-    margin-right: 30px;
+  a{
+    margin-right: 25px;
+    color: @text-color;
+    outline: none;
+    text-decoration: none;
+    &:focus{
+      border-bottom: 2px solid @custom-primary;
+    }
   }
 
 }
 
-@media (max-width: 400px)
+.navbar-container{
+  width: 100%;
+  max-width: 1100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .left{
+    width: 50%;
+    padding-left: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .right{
+    width: 50%;
+    padding-right: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+}
+
+svg{
+  fill: @secondary-color;
+  width: 45px;
+  /* width: 80%; */
+  &:hover{
+    cursor: pointer;
+  }
+}
+
+@media (max-width: 770px){
+  svg{
+    fill: @custom-primary;
+  }
+}
+
+@media (max-width: 570px)
+{
+  .skip-content{
+    display: none;
+  }
+  .navbar-container{
+    .left{
+      width: 30%;
+      height: 50px;
+    }
+
+    .right{
+      width: 70%;
+    }
+  }
+}
+
+@media (max-width: 450px)
+{
+  .navbar-container{
+    .left{
+      width: 20%;
+      padding-left: 20px;
+    }
+
+    .right{
+      width: 80%;
+      padding-right: 20px ;
+    }
+  }
+}
+
+@media (max-width: 405px)
 {
   .selector{
-    width: 200px;
+    width: 160px;
     margin-right: 0px;
+  }
+  a{
+    margin-right: 25px;
+  }
+}
+
+@media (max-width: 340px){
+  .selector{
+    width: 120px;
   }
 }
