--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -1,9 +1,10 @@
 @import "../../../../common-variables.less";
 
 nav{
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 50px;
+  top: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,6 +58,10 @@ nav{
   }
 }
 
+.burger-icon{
+  display: none;
+}
+
 svg{
   fill: @secondary-color;
   width: 45px;
@@ -70,11 +75,10 @@ svg{
   svg{
     fill: @custom-primary;
   }
-}
-
-@media (max-width: 570px)
-{
-  .skip-content{
+  .burger-icon{
+    display: inline;
+  }
+  .misojo-icon{
     display: none;
   }
   .navbar-container{
@@ -89,7 +93,23 @@ svg{
   }
 }
 
-@media (max-width: 450px)
+@media (max-width: 570px)
+{
+  .skip-content{
+    display: none;
+  }
+  .navbar-container{
+    .left{
+      width: 20%;
+    }
+
+    .right{
+      width: 80%;
+    }
+  }
+}
+
+@media (max-width: 470px)
 {
   .navbar-container{
     .left{
@@ -100,6 +120,11 @@ svg{
     .right{
       width: 80%;
       padding-right: 20px ;
+    }
+  }
+  nav{
+    a{
+      margin-right: 15px;
     }
   }
 }
