--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -34,6 +34,7 @@ nav{
 
 }
 
+
 .navbar-container{
   width: 100%;
   max-width: 1100px;
@@ -55,6 +56,12 @@ nav{
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    ul{
+      margin: 0;
+      padding: 0;
+      display: flex;
+      list-style: none;
+    }
   }
 }
 
