feat(navbar): dynamic class on ul list

--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -84,6 +84,8 @@ svg{
   }
   .burger-icon{
     display: inline;
+    border: none;
+    background: none;
   }
   .misojo-icon{
     display: none;
