--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -56,6 +56,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
     ul{
       margin: 0;
       padding: 0;
@@ -98,6 +99,36 @@ svg{
 
     .right{
       width: 70%;
+
+      ul {
+        position: fixed;
+        top: 0;
+        right: -250px;
+        background-color: @custom-primary;
+        width: 200px;
+        height: 100vh;
+        z-index: 20;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 30px 0;
+        gap: 30px;
+        transition-duration: 0.5s;
+
+        &.active {
+          right: 0;
+        }
+
+        li {
+
+          a {
+            margin: 0;
+            color: @secondary-color;
+            font-weight: bold;
+            font-size: 120%;
+          }
+        }
+      }
     }
   }
 }
