--- a/src/styles.less
+++ b/src/styles.less
@@ -21,6 +21,10 @@ a, p, label{
   font-family: @text-font !important;
 }
 
+p{
+  margin: 0;
+}
+
 // Overwrite sweet alert styles
 button.swal2-confirm {
   border-radius: 7px;
