--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,8 +1,14 @@
 
 <section class="main-section">
   <aside class="menu">
-    <div>{{ 'HOME.MENU.MY_FILES' | translate }}</div>
-    <div>{{ 'HOME.MENU.PUBLIC_FILES' | translate }}</div>
+    <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/mylibrary')}">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.657 0-3 1.343-3 3v18c0 1.657 1.343 3 3 3h17v-20h-16.505c-1.375 0-1.375-2 0-2zm.505 4h14v16h-14v-16z"/></svg>
+      <a routerLink="/home/mylibrary">{{ 'HOME.MENU.MY_FILES' | translate }}</a>
+    </div>
+    <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
+      <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.PUBLIC_FILES' | translate }}</a>
+    </div>
   </aside>
   <aside class="page">
     <router-outlet></router-outlet>
@@ -11,6 +17,5 @@
 <div class="audio-player">
   <audio controls>
       <source src="/assets/audio.mp3" type="audio/mp3">
-      Tu navegador no soporta la etiqueta audio.
   </audio>
 </div>
