--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="content">
   <div class="left">
     <img src="../../../../assets/Images/Audiobook-pana.svg" alt="" data-aos="fade-down" data-aos-duration="1000">
