--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -9,6 +9,7 @@ nav{
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  z-index: 2;
 
   .skip-content{
     margin-top: -150px;
