--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -80,6 +80,17 @@ svg{
   }
 }
 
+@media (max-width: 855px){
+  .navbar-container{
+    .left{
+      width: 40%;
+    }
+    .right{
+      width: 60%;
+    }
+  }
+}
+
 @media (max-width: 770px){
   svg{
     fill: @custom-primary;
