fix(home): new styles on menu

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,8 +10,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid @custom-primary;
-  background-color: @custom-primary;
+  border: 1px solid @primary-color;
+  background-color: @primary-color;
   border-radius: 25px;
   box-sizing: border-box;
   box-shadow: 0px 0px 10px rgba(black, 0.3);
