--- a/src/app/components/authentication/login/login.component.less
+++ b/src/app/components/authentication/login/login.component.less
@@ -70,18 +70,18 @@ h1, p{
 
 .title:focus{
   outline: none;
-  border-bottom: 2px solid @custom-primary;
+  border-bottom: 2px solid @primary-color;
 }
 
 a{
   text-decoration: none;
-  color: @custom-primary;
+  color: @primary-color;
   cursor: pointer;
 }
 
 a:focus{
   outline: none;
-  border-bottom: 2px solid @custom-primary;
+  border-bottom: 2px solid @primary-color;
 }
 
 .redirect{
