--- a/src/app/components/controls/button/button.component.less
+++ b/src/app/components/controls/button/button.component.less
@@ -6,25 +6,25 @@ button{
   margin-top: 30px;
   border-radius: 7px;
   font-family: 'Noto Sans', sans-serif;
-  background-color: @custom-primary;
+  background-color: @primary-color;
   transition: all @transition-duration ease-out;
   font-size: @text-xl;
   color: white;
   padding: 5px 0;
   cursor: pointer;
-  border: 3px solid @custom-primary;
+  border: 3px solid @primary-color;
   font-weight: bold;
 
   &:focus{
     outline: none;
     background-color: @secondary-color;
-    color: @custom-primary;
+    color: @primary-color;
     transform: scale(1.05);
   }
 
   &:hover{
     background-color: @secondary-color;
-    color: @custom-primary;
+    color: @primary-color;
     transform: scale(1.05);
   }
 
