--- a/src/app/components/controls/input/input.component.less
+++ b/src/app/components/controls/input/input.component.less
@@ -13,7 +13,7 @@ input {
   &:focus{
     outline: none;
   }
-  
+
   &::placeholder{
     font-family: 'Noto Sans', sans-serif;
     color: @light-grey;
@@ -21,7 +21,7 @@ input {
 
   &:focus{
     outline: none;
-    border: 2px solid @custom-primary;
+    border: 2px solid @primary-color;
   }
 
   &.error-field{
