--- a/src/app/components/controls/language-selector/language-selector.component.less
+++ b/src/app/components/controls/language-selector/language-selector.component.less
@@ -5,13 +5,13 @@ button{
   max-width: 85%;
 
   font-family: 'Noto Sans', sans-serif;
-  background-color: @custom-primary;
+  background-color: @primary-color;
   transition: all @transition-duration ease-out;
   font-size: @text-sm;
   color: white;
   padding: 5px 0;
   cursor: pointer;
-  border: 3px solid @custom-primary;
+  border: 3px solid @primary-color;
   font-weight: bold;
 
   &:focus{
@@ -43,7 +43,7 @@ img{
 
 .selected{
   background-color: @secondary-color;
-  color: @custom-primary;
+  color: @primary-color;
 }
 
 @media (max-width: 340px)
