--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -29,7 +29,7 @@ nav{
     outline: none;
     text-decoration: none;
     &:focus{
-      border-bottom: 2px solid @custom-primary;
+      border-bottom: 2px solid @primary-color;
     }
   }
 
@@ -93,7 +93,7 @@ svg{
 
 @media (max-width: 770px){
   svg{
-    fill: @custom-primary;
+    fill: @primary-color;
   }
   .burger-icon{
     display: inline;
@@ -115,7 +115,7 @@ svg{
         position: fixed;
         top: 0;
         right: -250px;
-        background-color: @custom-primary;
+        background-color: @primary-color;
         width: 200px;
         height: 100vh;
         z-index: 20;
