--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -53,8 +53,8 @@
       <div class="user-information">
         <img src="../../../../assets/Images/Audiobook-pana.svg">
         <div class="user-text-information">
-          <p class="user-name">{{userName}}</p>
-          <p class="email-text">{{userEmail}}</p>
+          <p class="user-name">{{cutStringValue(userName, 'name')}}</p>
+          <p class="email-text">{{cutStringValue(userEmail, 'email')}}</p>
         </div>
       </div>
     </section>
