--- a/src/common-variables.less
+++ b/src/common-variables.less
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Poppins:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo&family=Noto+Sans&family=Poppins:wght@400;500&display=swap');
 
-@custom-primary:  #ffac6c;
-@secondary-color:#fffbf5;
-@tertiary-color: #f9f4ed;
+@primary-color:  #aebea4;
+@secondary-color: #e2e8ce;
+@tertiary-color: #262626;
 @text-color: #020202;
+@background-color: #e0d8d6;
+@white-color: #e7e6e2;
 @light-grey: #d7d3d0;
 
 @text-xs: 0.75rem; /* 12px */
