--- a/src/app/components/home/home/home.component.less
+++ b/src/app/components/home/home/home.component.less
@@ -9,48 +9,55 @@
 }
 
 .menu{
-  width: 20%;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: @secondary-color;
+  background-color: @tertiary-color;
   overflow: hidden;
   box-sizing: border-box;
+
+  p{
+    color: @white-color;
+  }
 
   .upper-section{
     padding: 20px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     box-sizing: border-box;
     .misojo-icon{
       width: 35px;
-      fill: @custom-primary;
+      fill: @primary-color;
     }
     .file-options{
+      padding-left: 10px;
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 20px;
     }
   }
   .bottom-section{
     display: flex;
     flex-direction: column;
-    
+    gap: 10px;
     .user-options{
-      padding: 20px;
+      padding: 30px;
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 20px;
       box-sizing: border-box;
     }
     .user-information{
       padding: 20px;
       display: flex;
-      justify-content: space-evenly;
-      background-color: @tertiary-color;
+      justify-content: flex-start;
+      gap: 15px;
+      background-color: fade(@primary-color, 10%);
       box-sizing: border-box;
       img{
+        background-color: @tertiary-color;
         width: 35px;
         border-radius: 35px;
       }
@@ -67,22 +74,36 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    opacity: 0.6;
     svg{
       width: 15px;
+      fill: @white-color;
     }
     a{
       text-decoration: none;
-      color: @text-color;
+      color: @white-color;
+    }
+  }
+
+  .menu-option:hover{
+    opacity: 1;
+    font-weight: bold;
+    a{
+      color: @secondary-color;
+    }
+    svg{
+      fill: @secondary-color;
     }
   }
 
   .active-route{
+    opacity: 1;
     font-weight: bold;
     a{
-      color: @custom-primary;
+      color: @primary-color;
     }
     svg{
-      fill: @custom-primary;
+      fill: @primary-color;
     }
   }
 }
@@ -128,11 +149,11 @@ audio::-webkit-media-controls-enclosure {
 audio::-webkit-media-controls-current-time-display,
 audio::-webkit-media-controls-time-remaining-display {
   font-size: @text-sm;
-  color: @custom-primary;
+  color: @primary-color;
 }
 
 /* audio::-webkit-media-controls-timeline{
-  background-color: @custom-primary;
+  background-color: @primary-color;
 }
 
 .audio-player audio::-webkit-media-controls-timeline::-webkit-media-slider-thumb {
