fix(home): new icon

--- a/src/app/components/home/home/home.component.less
+++ b/src/app/components/home/home/home.component.less
@@ -29,6 +29,7 @@
     box-sizing: border-box;
     .misojo-icon{
       width: 35px;
+      height: 35px;
       fill: @primary-color;
     }
     .file-options{
