--- a/src/app/components/controls/button/button.component.less
+++ b/src/app/components/controls/button/button.component.less
@@ -15,14 +15,8 @@ button{
   border: 3px solid @primary-color;
   font-weight: bold;
 
-  &:focus{
+  &:focus, &:hover {
     outline: none;
-    background-color: @secondary-color;
-    color: @primary-color;
-    transform: scale(1.05);
-  }
-
-  &:hover{
     background-color: @secondary-color;
     color: @primary-color;
     transform: scale(1.05);
