--- a/src/app/components/controls/input/input.component.less
+++ b/src/app/components/controls/input/input.component.less
@@ -5,7 +5,7 @@ input {
   padding: 6px 15px;
   font-family: 'Noto Sans', sans-serif;
   background-color: @secondary-color;
-  border: 2px solid rgba(@light-grey, 0.6);
+  border: 2px solid fade(@tertiary-color, 10%);
   border-radius: 7px;
   box-sizing: border-box;
   transition-duration: @transition-duration;
@@ -16,12 +16,12 @@ input {
 
   &::placeholder{
     font-family: 'Noto Sans', sans-serif;
-    color: @light-grey;
+    color: fade(@tertiary-color, 30%);
   }
 
   &:focus{
     outline: none;
-    border: 2px solid @primary-color;
+    border: 2px solid fade(@tertiary-color, 60%);
   }
 
   &.error-field{
