style (sign up): verticial responsive

--- a/src/app/components/authentication/sign-up/sign-up.component.less
+++ b/src/app/components/authentication/sign-up/sign-up.component.less
@@ -215,6 +215,12 @@ form{
 }
 
 // Vertical responsive
+@media (max-height: 865px) {
+  .content .right, .content .left {
+    padding-top: 40px;
+  }
+}
+
 @media (max-height: 600px)
 {
   .content {
