--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -16,25 +16,25 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.657 0-3 1.343-3 3v18c0 1.657 1.343 3 3 3h17v-20h-16.505c-1.375 0-1.375-2 0-2zm.505 4h14v16h-14v-16z"/></svg>
           <a routerLink="/home/mylibrary">{{ 'HOME.MENU.MY_FILES' | translate }}</a>
         </div>
-        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/public')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.PUBLIC_FILES' | translate }}</a>
+          <a routerLink="/home/public">{{ 'HOME.MENU.PUBLIC_FILES' | translate }}</a>
         </div>
-        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/recomendations')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.RECOMENDATIONS' | translate }}</a>
+          <a routerLink="/home/recomendations">{{ 'HOME.MENU.RECOMENDATIONS' | translate }}</a>
         </div>
-        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/upload')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.UPLOAD' | translate }}</a>
+          <a routerLink="/home/upload">{{ 'HOME.MENU.UPLOAD' | translate }}</a>
         </div>
-        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/report')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.REPORT' | translate }}</a>
+          <a routerLink="/home/report">{{ 'HOME.MENU.REPORT' | translate }}</a>
         </div>
-        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/follow')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.FOLLOW' | translate }}</a>
+          <a routerLink="/home/follow">{{ 'HOME.MENU.FOLLOW' | translate }}</a>
         </div>
       </div>
     </section>
@@ -42,13 +42,13 @@
     <section class="bottom-section">
       <!-- User options -->
       <div class="user-options">
-        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/settings')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.SETTINGS' | translate }}</a>
+          <a routerLink="/home/settings">{{ 'HOME.MENU.SETTINGS' | translate }}</a>
         </div>
-        <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/publiclibrary')}">
+        <div class="menu-option">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/publiclibrary">{{ 'HOME.MENU.LOGOUT' | translate }}</a>
+          <a href="#">{{ 'HOME.MENU.LOGOUT' | translate }}</a>
         </div>
       </div>
       <!-- User information -->
