--- a/src/app/components/home/home/home.component.less
+++ b/src/app/components/home/home/home.component.less
@@ -2,13 +2,15 @@
 
 .main-section{
   height: 100vh;
-  padding: 0 20px 0 0;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   gap: 20px;
   box-sizing: border-box;
 }
 
 .menu{
+  height: 100vh;
   width: auto;
   display: flex;
   flex-direction: column;
@@ -111,7 +113,7 @@
 
 .page{
   width: 80%;
-  padding: 20px;
+  /* padding: 20px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
