--- a/src/app/components/home/settings/settings.component.html
+++ b/src/app/components/home/settings/settings.component.html
@@ -1,1 +1,126 @@
-<p>settings works!</p>
+<div class="content">
+  <form [formGroup]="signUpForm" (ngSubmit)="submit()" novalidate>
+    <div class="spinner" *ngIf="showSpinner">
+      <app-spinner></app-spinner>
+    </div>
+
+    <h1 attr.aria-label="{{ 'HOME.MENU.SETTINGS.NAME' | translate }}" data-aos="fade-down" data-aos-duration="800" data-aos-delay="800">{{ 'HOME.MENU.SETTINGS.NAME' | translate }}</h1>
+
+    <div class="inputs" data-aos="fade-down" data-aos-duration="800" data-aos-delay="1200">
+      <div class="split-row">
+        <div class="row">
+          <app-label
+            text="{{ 'HOME.MENU.SETTINGS.FIRST_NAME' | translate }}"
+          >
+          </app-label>
+          <app-input
+            name="name"
+            [placeHolderText]="'HOME.MENU.SETTINGS.PLACEHOLDER_FIRST_NAME' | translate"
+            type="text"
+            formControlName="name"
+            [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.FIRSTNAMEINPUT' | translate"
+            [ariaLabelledBy]="'required-message-firstname'"
+            [control]="signUpForm.controls['name']"
+            [submitted]="submitted"
+            [error]="this.signUpForm.get('name')!.hasError('required')"
+          >
+          </app-input>
+          <p id="required-message-firstname" *ngIf="this.signUpForm.get('name')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_FIRSTNAME' | translate}}</p>
+        </div>
+        <div class="row">
+          <app-label
+            text="{{ 'HOME.MENU.SETTINGS.LAST_NAME' | translate }}"
+          >
+          </app-label>
+          <app-input
+            name="lastName"
+            [placeHolderText]="'HOME.MENU.SETTINGS.PLACEHOLDER_LAST_NAME' | translate"
+            type="text"
+            formControlName="lastName"
+            [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.LASTNAMEINPUT' | translate"
+            [ariaLabelledBy]="'required-message-lastname'"
+            [control]="signUpForm.controls['lastName']"
+            [submitted]="submitted"
+            [error]="this.signUpForm.get('lastName')!.hasError('required')"
+          >
+          </app-input>
+          <p id="required-message-lastname" *ngIf="this.signUpForm.get('lastName')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_LASTNAME' | translate}}</p>
+        </div>
+      </div>
+      <app-label
+        text="{{ 'HOME.MENU.SETTINGS.EMAIL' | translate }}"
+      >
+      </app-label>
+      <app-input
+        name="email"
+        [placeHolderText]="'HOME.MENU.SETTINGS.PLACEHOLDER_EMAIL' | translate"
+        type="email"
+        formControlName="email"
+        [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.EMAILINPUT' | translate"
+        [ariaLabelledBy]="'required-message-email format-message-email'"
+        [control]="signUpForm.controls['email']"
+        [submitted]="submitted"
+        [error]="this.signUpForm.get('email')!.hasError('required') || this.signUpForm.get('email')!.hasError('email')"
+      >
+      </app-input>
+      <p id="required-message-email" *ngIf="this.signUpForm.get('email')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_EMAIL' | translate}}</p>
+      <p id="format-message-email" *ngIf="this.signUpForm.get('email')!.hasError('email') && submitted" class="error-field">{{'INPUT_ERRORS.INVALID_EMAIL' | translate}}</p>
+      <div class="split-row">
+        <div class="row">
+          <app-label
+            text="{{ 'HOME.MENU.SETTINGS.PASSWORD' | translate }}"
+          >
+          </app-label>
+          <app-input
+            name="password"
+            [placeHolderText]="'HOME.MENU.SETTINGS.PLACEHOLDER_PASSWORD' | translate"
+            type="password"
+            formControlName="password"
+            [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.PASSWORDINPUT' | translate"
+            [ariaLabelledBy]="'required-message-password format-message-password different-message-password'"
+            [control]="signUpForm.controls['password']"
+            [submitted]="submitted"
+            [error]="this.signUpForm.get('password')!.hasError('required') || this.signUpForm.get('password')!.value.length<8 || this.signUpForm.get('passwordConfirm')!.value != this.signUpForm.get('password')!.value"
+          >
+          </app-input>
+          <!-- <p id="required-message-password" *ngIf="this.signUpForm.get('password')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_PASSWORD' | translate}}</p> -->
+          <p id="format-message-password" *ngIf="this.signUpForm.get('password')!.value.length<8 && submitted" class="error-field">{{'INPUT_ERRORS.INVALID_TEXT_LENGTH' | translate}}</p>
+          <p id="different-message-password" *ngIf="this.signUpForm.get('passwordConfirm')!.value != this.signUpForm.get('password')!.value  && submitted" class="error-field">{{'INPUT_ERRORS.DIFERENT_PASSWORD' | translate}}</p>
+        </div>
+        <div class="row">
+          <app-label
+            text="{{ 'HOME.MENU.SETTINGS.CONFIRM_PASSWORD' | translate }}"
+          >
+          </app-label>
+          <app-input
+            name="passwordConfirm"
+            [placeHolderText]="'HOME.MENU.SETTINGS.PLACEHOLDER_CONFIRM_PASSWORD' | translate"
+            tabindex="'5'"
+            type="password"
+            formControlName="passwordConfirm"
+            [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.CONFIRMPASSWORDINPUT' | translate"
+            [ariaLabelledBy]="'required-message-confirm-password'"
+            [control]="signUpForm.controls['passwordConfirm']"
+            [submitted]="submitted"
+            [error]="this.signUpForm.get('passwordConfirm')!.value==''"
+          >
+          </app-input>
+          <p id="required-message-confirm-password" *ngIf="this.signUpForm.get('passwordConfirm')!.value=='' && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_CONFIRM_PASSWORD' | translate}}</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="centered">
+      <div class="row">
+        <div class="button-comtainer">
+          <app-button
+          text="{{ 'HOME.MENU.SETTINGS.UPDATEBTN' | translate }}"
+            [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.UPDATEBTN' | translate"
+          >
+          </app-button>
+        </div>
+
+      </div>
+    </div>
+  </form>
+</div>
